--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
     <h2>Наша команда</h2>
     <ul>
         <li>
-            <img src="/images/img.jpg" alt="Игорь Демьяненко">
+            <img src="./images/img.jpg" alt="Игорь Демьяненко">
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="/images/img-2.jpg" alt="Ольга Репина">
+            <img src="./images/img-2.jpg" alt="Ольга Репина">
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="/images/img-3.jpg" alt="Николай Тарасов">
+            <img src="./images/img-3.jpg" alt="Николай Тарасов">
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="/images/img-4.jpg" alt="Михаил Ермаков">
+            <img src="./images/img-4.jpg" alt="Михаил Ермаков">
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
         </li>
