--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 <!--About us section-->
 <section>
     <h2>Чем мы занимаемся</h2>
-    <img src="/images/box 1.jpg" alt="Програмирование" width="370">
-    <img src="/images/box 2.jpg" alt="Тестирование" width="370">
-    <img src="/images/box 3.jpg" alt="Создание дизайна" width="370">
+    <img src="./images/box 1.jpg" alt="Програмирование" width="370">
+    <img src="./images/box 2.jpg" alt="Тестирование" width="370">
+    <img src="./images/box 3.jpg" alt="Создание дизайна" width="370">
 </section>
 <!--About our team-->
 <section>
@@ -84,15 +84,12 @@
 </section>
 </main>
 <footer>
-    <nav>
-        <a href="">WebStudio</a>
-        <ul>
-            <li>г. Киев, пр-т Леси Украинки, 26</li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-
-    </nav>
+    <a href="">WebStudio</a>
+    <ul>
+        <li>г. Киев, пр-т Леси Украинки, 26</li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
 </footer>
     
 </body>
