--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <section>
     <h1>Эффективные решения для вашего бизнеса</h1>
     <button>Заказать услугу</button>
+    
 </section>
 <!--Main points-->
 <section>
@@ -61,22 +62,22 @@
     <h2>Наша команда</h2>
     <ul>
         <li>
-            <img src="./images/img.jpg" alt="Игорь Демьяненко">
+            <img src="./images/img.jpg" alt="Игорь Демьяненко" width="270">
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="./images/img-2.jpg" alt="Ольга Репина">
+            <img src="./images/img-2.jpg" alt="Ольга Репина" width="270">
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/img-3.jpg" alt="Николай Тарасов">
+            <img src="./images/img-3.jpg" alt="Николай Тарасов" width="270">
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="./images/img-4.jpg" alt="Михаил Ермаков">
+            <img src="./images/img-4.jpg" alt="Михаил Ермаков" width="270">
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
         </li>
