--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 <header>
     <nav>
-        <a href="">WebStudio</a>
+        <a href="" lang="en">WebStudio</a>
         <ul>
             <li> <a href="">Студия</a></li>
             <li> <a href="">Портфолио</a></li>
@@ -25,7 +26,7 @@
 <!--Main banner-->
 <section>
     <h1>Эффективные решения для вашего бизнеса</h1>
-    <button>Заказать услугу</button>
+    <button type="button">Заказать услугу</button>
     
 </section>
 <!--Main points-->
@@ -85,6 +86,7 @@
 </section>
 </main>
 <footer>
+    <!--Contacts-->
     <a href="">WebStudio</a>
     <ul>
         <li>г. Киев, пр-т Леси Украинки, 26</li>
